--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,10 @@
+// -*- less-css-compile-at-save: t; less-css-output-directory: "../css" -*-
+
 @import "bootstrap/bootstrap.less";
 @import "bootswatch.less";
 @import "variables.less";
 
-@import url(http://fonts.googleapis.com/css?family=Fenix);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
 .header {
   margin-top: 100px;
