--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,5 @@
+// -*- less-css-compile-at-save: t; less-css-output-file-name: "../css/style.css"; less-css-input-file: "style.less" -*-
+
 // Yeti 3.0.3
 // Variables
 // --------------------------------------------------
@@ -18,13 +20,13 @@
 // Brand colors
 // -------------------------
 
-@heading-title: #12495D;
-@heading-btn: #BE890A;
-@dark: #0A0A09;
-@emph: #A93A03;
-@emph-bg: #f2ecda;
+@heading-title: #556270;
+@heading-btn: #4ECDC4;
+@dark: #1c2024;
+@emph: @brand-primary;
+@emph-bg: rgba(255,107,107,0.1);
 
-@brand-primary:         #A93A03;
+@brand-primary:         #C44D58;
 @brand-success:         #43ac6a;
 @brand-warning:         #E99002;
 @brand-danger:          #F04124;
@@ -33,7 +35,7 @@
 // Scaffolding
 // -------------------------
 
-@body-bg:               #f2efe6;
+@body-bg:               #fff;
 @text-color:            @dark;
 
 // Links
@@ -45,7 +47,7 @@
 // Typography
 // -------------------------
 
-@font-family-sans-serif:  "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
