Explicit UTF-8 charset

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,8 @@
-// -*- less-css-compile-at-save: t; less-css-output-file-name: "../css/style.css"; less-css-input-file: "style.less" -*-
+// -*- less-css-compile-at-save: t; less-css-output-file-name: "../css/style.css"; less-css-input-file-name: "style.less" -*-
 
 // Yeti 3.0.3
 // Variables
 // --------------------------------------------------
-
 
 // Global values
 // --------------------------------------------------
