--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <head>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
   <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/css/pygments.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/css/font-awesome.css" type="text/css" media="screen" />
