--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,8 @@ layout: default
   })();
 </script>
 <body>
-  <div class="container">
+  {% include index_header.html %}
+  <div class="fluid-container">
     {% include post_header.html %}
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 content">
