Shift register post; Assets and drafts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
   })();
 </script>
+<script src="/assets/snap.svg.js"></script>
 <body>
   {% include index_header.html %}
   <div class="fluid-container">
