--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,25 @@
 
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 
+kbd
+{
+  -moz-border-radius:3px;
+  -moz-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  -webkit-border-radius:3px;
+  -webkit-box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  background-color:#f7f7f7;
+  border:1px solid #ccc;
+  border-radius:3px;
+  box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+  color:#333;
+  display:inline-block;
+  font-size:16px;
+  line-height:1.4;
+  margin:0 .1em;
+  padding:.1em .6em;
+  text-shadow:0 1px 0 #fff;
+}
+
 .header {
   text-align: center;
   padding-top: 80px;
@@ -75,6 +94,15 @@
   }
 }
 
+.content {
+  img {
+    max-width: 500px;
+    margin: 50px auto;
+    border-radius: 5px;
+    display: block;
+  }
+}
+
 time {
   font-family: @font-family-sans-serif;
   text-transform: uppercase;
@@ -109,6 +137,7 @@ svg {
 
   pre {
     background-color: @gray-darker;
+    font-size: 16px;
   }
 
   .bash { color: @brand-secondary; }
