--- a/css/style.css
+++ b/css/style.css
@@ -6106,6 +6106,23 @@ legend {
   border-top-width: 0;
   border-radius: 0 0 4px 4px;
 }
+kbd {
+  -moz-border-radius: 3px;
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
+  -webkit-border-radius: 3px;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
+  background-color: #f7f7f7;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
+  color: #333;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.4;
+  margin: 0 .1em;
+  padding: .1em .6em;
+  text-shadow: 0 1px 0 #fff;
+}
 .header {
   text-align: center;
   padding-top: 80px;
@@ -6171,6 +6188,12 @@ legend {
 .post .summary {
   margin-top: 30px;
 }
+.content img {
+  max-width: 500px;
+  margin: 50px auto;
+  border-radius: 5px;
+  display: block;
+}
 time {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
@@ -6201,6 +6224,7 @@ svg {
 }
 .highlight pre {
   background-color: #222222;
+  font-size: 16px;
 }
 .highlight .bash {
   color: #83af9b;
