Fixe responsive post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   <div class="fluid-container">
     {% include post_header.html %}
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 content">
+      <div class="col-xs-8 col-xs-offset-2 content">
         {{content}}
 
         <div id="disqus_thread"></div>
