Elasticsearch AWS post

--- a/less/style.less
+++ b/less/style.less
@@ -73,7 +73,7 @@ kbd
       }
       .fa-envelope {
         color: #C44D58;
-        &:hover { color: darken(#C44D58, 20%); } 
+        &:hover { color: darken(#C44D58, 20%); }
       }
     }
   }
@@ -96,7 +96,7 @@ kbd
 
 .content {
   img {
-    max-width: 500px;
+    max-width: 80%;
     margin: 50px auto;
     border-radius: 5px;
     display: block;
