--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,9 @@
 ---
 layout: default
 ---
-<script type="text/javascript">
-  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-  var disqus_shortname = 'jafrogsdevblog'; // required: replace example with your forum shortname
-
-  /* * * DON'T EDIT BELOW THIS LINE * * */
-  (function() {
-  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-  dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-  })();
-</script>
 <script src="/assets/snap.svg.js"></script>
-<body>
-  {% include index_header.html %}
-  <div class="fluid-container">
-    {% include post_header.html %}
-    <div class="row">
-      <div class="col-xs-8 col-xs-offset-2 content">
-        {{content}}
-
-        <div id="disqus_thread"></div>
-
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-      </div>
-    </div>
-  </div>
-</body>
-
+{% include post_header.html %}
+<div class="pb-20">
+  {{content}}
+</div>
 
