Simple NN blog post

--- a/css/main.css
+++ b/css/main.css
@@ -13,18 +13,26 @@ h1 {
     @apply text-3xl font-semibold mt-10 mb-7;
 }
 
+h2 {
+    @apply text-2xl font-semibold mt-10 mb-7;
+}
+
 h3 {
     @apply text-xl font-bold mt-10 mb-7;
 }
 
-/*code {*/
-/*    @apply bg-sky-50 px-1 py-1 rounded;*/
-/*}*/
+a {
+    @apply text-sky-500 underline;
+}
+
+code {
+    @apply bg-sky-50 px-1 py-1 rounded;
+}
 
 .highlighter-rouge {
     @apply my-4;
 }
 
-.highlight {
-    @apply my-4;
+pre.highlight {
+    @apply my-4 bg-sky-50 text-wrap;
 }
